2014-01-02  Marc Glisse  <marc.glisse@inria.fr>

	PR c++/59641
	* g++.dg/cpp0x/pr59641.C: New file.

2014-01-02  Marc Glisse  <marc.glisse@inria.fr>

	* g++.dg/cpp0x/initlist-explicit-sfinae.C: New file.

2014-01-02  Marc Glisse  <marc.glisse@inria.fr>

	PR c++/59378
	* g++.dg/ext/pr59378.C: New file.

2014-01-02  Richard Sandiford  <rdsandiford@googlemail.com>

	Update copyright years

2014-01-02  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.target/arc/arc.exp: Use the standard form for the copyright
	notice.

2014-01-02  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/59654
	* gfortran.dg/dynamic_dispatch_12.f90: New.

2014-01-01  Jakub Jelinek  <jakub@redhat.com>

	* lib/target-supports.exp (check_effective_target_avx512f): Make sure
	the builtin isn't optimized away as unused.

	PR rtl-optimization/59647
	* g++.dg/opt/pr59647.C: New test.

Copyright (C) 2014 Free Software Foundation, Inc.

Copying and distribution of this file, with or without modification,
are permitted in any medium without royalty provided the copyright
notice and this notice are preserved.